[package]
name = "frontier-consensus"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Frontier consensus for substrate"
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = "https://github.com/paritytech/frontier/"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", features = ["derive"] }
sp-core = "2.0.0"
sp-blockchain = "2.0.0"
sp-runtime = "2.0.0"
sp-api = "2.0.0"
sc-client-api = "2.0.0"
sp-block-builder = "2.0.0"
sp-inherents = "2.0.0"
frontier-consensus-primitives = { version = "0.1.0", path = "primitives" }
sp-consensus = "0.8.0"
log = "0.4.8"
futures = { version = "0.3.1", features = ["compat"] }
sp-timestamp = "2.0.0"
derive_more = "0.99.2"
prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.8.0" }
ethereum = { version = "0.3", features = ["codec"] }
