[package]
name = "frontier-rpc"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Ethereum RPC (web3) compatibility layer for Substrate."
license = "GPL-3.0"

[dependencies]
jsonrpc-core = "15.0.0"
jsonrpc-derive = "14.0.3"
jsonrpc-core-client = "14.0.3"
jsonrpc-pubsub = "15.0.0"
log = "0.4.8"
ethereum-types = "0.9.0"
frontier-consensus = { path = "../consensus" }
frontier-rpc-core = { path = "core" }
frontier-rpc-primitives = { path = "primitives" }
sp-io = "2.0.0"
sp-runtime = "2.0.0"
sp-api = "2.0.0"
sp-transaction-pool = "2.0.0"
sp-storage = "2.0.0"
sp-blockchain = "2.0.0"
sc-service = "0.8.0"
sc-client-api = "2.0.0"
sc-rpc = "2.0.0"
sc-network = "0.8.0"
ethereum = { version = "0.3", features = ["codec"] }
codec = { package = "parity-scale-codec", version = "1.0.0" }
rlp = "0.4"
pallet-ethereum = "0.1"
futures = { version = "0.3.1", features = ["compat"] }
sha3 = "0.8"
