[package]
name = "frontier-consensus-primitives"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Primitives for Frontier consensus"
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[dependencies]
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
	"sp-std/std",
	"sp-runtime/std",
	"sp-core/std",
	"codec/std",
]
