[package]
name = "pallet-ethereum"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Ethereum compatibility full block processing emulation pallet for Substrate."
license = "GPL-3.0"

[dependencies]
rustc-hex = { version = "2.1.0", default-features = false }
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false }
frame-support = { git = "https://github.com/purestake/substrate", default-features = false, branch = "crystalin-rococo-branch" }
frame-system = { git = "https://github.com/purestake/substrate", default-features = false, branch = "crystalin-rococo-branch" }
pallet-balances = { git = "https://github.com/purestake/substrate", default-features = false, branch = "crystalin-rococo-branch" }
pallet-timestamp = { git = "https://github.com/purestake/substrate", default-features = false, branch = "crystalin-rococo-branch" }
pallet-evm = { git = "https://github.com/purestake/substrate", default-features = false, branch = "crystalin-rococo-branch" }
sp-runtime = { git = "https://github.com/purestake/substrate", default-features = false, branch = "crystalin-rococo-branch" }
sp-std = { git = "https://github.com/purestake/substrate", default-features = false, branch = "crystalin-rococo-branch" }
sp-io = { git = "https://github.com/purestake/substrate", default-features = false, branch = "crystalin-rococo-branch" }
ethereum = { version = "0.2", default-features = false, features = ["codec"], path = "../../../ethereum" }
ethereum-types = { version = "0.9", default-features = false }
rlp = { version = "0.4", default-features = false }
sha3 = { version = "0.8", default-features = false }
libsecp256k1 = { version = "0.3", default-features = false }
frontier-rpc-primitives = { path = "../../rpc/primitives", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/purestake/substrate", default-features = false, branch = "crystalin-rococo-branch" }

[features]
default = ["std"]
std = [
	"serde",
	"rustc-hex/std",
	"codec/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-timestamp/std",
	"pallet-evm/std",
	"sp-io/std",
	"sp-std/std",
	"ethereum/std",
	"ethereum-types/std",
	"rlp/std",
	"sha3/std",
	"libsecp256k1/std",
	"frontier-rpc-primitives/std",
]
