[package]
name = "frontier-template-node"
version = "2.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate Node template"
edition = "2018"
license = "Apache-2.0"
build = "build.rs"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = "0.3.4"
log = "0.4.8"
structopt = "0.3.8"
jsonrpc-core = "15.0.0"
jsonrpc-pubsub = "15.0.0"

sp-api = "2.0.0"
sp-blockchain = "2.0.0"
sc-rpc-api = "0.8.0"
sc-rpc = "2.0.0"
substrate-frame-rpc-system = "2.0.0"
pallet-transaction-payment-rpc = "2.0.0"
sc-cli = "0.8.0"
sp-core = "2.0.0"
sc-executor = "0.8.0"
sc-service = "0.8.0"
sp-inherents = "2.0.0"
sc-transaction-pool = "2.0.0"
sp-transaction-pool = "2.0.0"
sc-network = "0.8.0"
sc-consensus-aura = "0.8.0"
sp-consensus-aura = "0.8.0"
sc-consensus-manual-seal = "0.8.0"
sp-consensus = "0.8.0"
sc-consensus = "0.8.0"
sp-timestamp = { version = "2.0.0", default-features = false }
evm = { version = "2.0.0-dev", package = "pallet-evm", git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
ethereum = { version = "0.1.0", package = "pallet-ethereum" }
sc-finality-grandpa = "0.8.0"
sp-finality-grandpa = "2.0.0"
sc-client-api = "2.0.0"
sp-runtime = "2.0.0"
sc-basic-authorship = "0.8.0"
sp-block-builder = "2.0.0"

frontier-consensus = { version = "0.1.0", path = "../../consensus" }
frontier-template-runtime = { version = "2.0.0-dev", path = "../runtime" }
frontier-rpc = { version = "0.1.0", path = "../../rpc" }
frontier-rpc-primitives = { version = "0.1.0", path = "../../rpc/primitives" }

[build-dependencies]
substrate-build-script-utils = "2.0.0"
