[package]
name = "frontier-template-node"
version = "3.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate Node template"
edition = "2018"
license = "Unlicense"
build = "build.rs"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = "0.3.4"
log = "0.4.8"
structopt = "0.3.8"
jsonrpc-core = "15.0.0"
jsonrpc-pubsub = "15.0.0"

sp-api = "3.0.0"
sp-blockchain = "3.0.0"
sc-rpc-api = "0.9.0"
sc-rpc = "3.0.0"
substrate-frame-rpc-system = "3.0.0"
pallet-transaction-payment-rpc = "3.0.0"
sc-cli = "0.9.0"
sp-core = "3.0.0"
sc-executor = "0.9.0"
sc-service = "0.9.0"
sp-inherents = "3.0.0"
sc-transaction-pool = "3.0.0"
sp-transaction-pool = "3.0.0"
sc-network = "0.9.0"
sc-consensus-aura = "0.9.0"
sp-consensus-aura = "0.9.0"
sc-consensus-manual-seal = "0.9.0"
sp-consensus = "0.9.0"
sc-consensus = "0.9.0"
sp-timestamp = "3.0.0"
pallet-evm = { path = "../../frame/evm" }
pallet-ethereum = { path = "../../frame/ethereum" }
sc-finality-grandpa = "0.9.0"
sp-finality-grandpa = "3.0.0"
sc-client-api = "3.0.0"
sp-runtime = "3.0.0"
sc-basic-authorship = "0.9.0"
sp-block-builder = "3.0.0"
sc-telemetry = "3.0.0"

fc-consensus = { path = "../../client/consensus" }
fp-consensus = { path = "../../primitives/consensus" }
frontier-template-runtime = { path = "../runtime" }
fc-rpc = { path = "../../client/rpc" }
fp-rpc = { path = "../../primitives/rpc" }
fc-rpc-core = { path = "../../client/rpc-core" }

[build-dependencies]
substrate-build-script-utils = "3.0.0"
