[package]
name = "frontier-template-runtime"
version = "2.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Unlicense"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }

frame-executive = { version = "2.0.0-dev", default-features = false }
frame-support = { version = "2.0.0-dev", default-features = false }
frame-system = { version = "2.0.0-dev", default-features = false, package = "frame-system" }
frame-system-rpc-runtime-api = { version = "2.0.0-dev", default-features = false }

pallet-ethereum = { version = "0.1.0", default-features = false, path = "../../frame/ethereum" }
pallet-evm = { version = "2.0.0-dev", default-features = false, path = "../../frame/evm" }
pallet-evm-precompile-simple = { version = "2.0.0-dev", default-features = false, path = "../../frame/evm/precompile/simple" }
pallet-aura = { version = "2.0.0-dev", default-features = false }
pallet-balances = { version = "2.0.0-dev", default-features = false }
pallet-grandpa = { version = "2.0.0-dev", default-features = false }
pallet-randomness-collective-flip = { version = "2.0.0-dev", default-features = false }
pallet-sudo = { version = "2.0.0-dev", default-features = false }
pallet-timestamp = { version = "2.0.0-dev", default-features = false }
pallet-transaction-payment = { version = "2.0.0-dev", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "2.0.0-dev", default-features = false }

sp-api = { version = "2.0.0-dev", default-features = false }
sp-block-builder = { default-features = false}
sp-consensus-aura = { version = "0.8.0-dev", default-features = false }
sp-core = { version = "2.0.0-dev", default-features = false }
sp-inherents = { default-features = false}
sp-io = { version = "2.0.0-dev", default-features = false }
sp-offchain = { version = "2.0.0-dev", default-features = false }
sp-runtime = { version = "2.0.0-dev", default-features = false }
sp-session = { version = "2.0.0-dev", default-features = false }
sp-std = { version = "2.0.0-dev", default-features = false }
sp-transaction-pool = { version = "2.0.0-dev", default-features = false }
sp-version = { version = "2.0.0-dev", default-features = false }

fp-rpc = { default-features = false, path = "../../primitives/rpc" }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",

	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"fp-rpc/std",

	"pallet-ethereum/std",
	"pallet-evm/std",
	"pallet-evm-precompile-simple/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",

	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
]
