[package]
name = "frontier-template-test-client"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Ethereum RPC (web3) compatibility layer for Substrate."
license = "GPL-3.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0" }
sp-runtime = "3.0.0"
sp-api = "3.0.0"
sc-executor = "0.9.0"
sc-light = "3.0.0"
sc-consensus = "0.9.0"
sc-client-api = "3.0.0"
frontier-template-runtime = { path = "../../runtime" }
