[package]
name = "frontier-template-test-client"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Ethereum RPC (web3) compatibility layer for Substrate."
license = "GPL-3.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0" }
sp-runtime = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-executor = { version = "0.9.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-light = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-consensus = { version = "0.9.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-client-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
frontier-template-runtime = { path = "../../runtime" }
